force-app/main/default/objects/Knowledge__kav/fields/Article_Link__c.field-meta.xml
<CustomField>
    <fullName>Article_Link__c</fullName>
    <formula>$Label.LighteningURL&amp;&quot;/Knowledge__kav/&quot;&amp;Id&amp;&quot;/view?0.source=alohaHeader&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Article Link</label>
    <type>Text</type>
</CustomField>