force-app/main/default/objects/Knowledge__kav/fields/Customer_Updates__c.field-meta.xml
<CustomField>
    <fullName>Customer_Updates__c</fullName>
    <description>SDS: 2553: Notes provided in this filed will be shared as a public comment on an attached Cases.</description>
    <inlineHelpText>IMPORTANT: Notes provided in this field will be shared as a public comment on attached Cases.</inlineHelpText>
    <label>Customer Updates</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>