force-app/main/default/objects/Knowledge__kav/fields/Customer_URL__c.field-meta.xml
<CustomField>
    <fullName>Customer_URL__c</fullName>
    <formula>$Label.ESP_Community_BaseURL&amp;&quot;?type=article&amp;id=&quot;&amp;UrlName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer URL</label>
    <type>Text</type>
</CustomField>