force-app/main/default/objects/Knowledge__kav/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <inlineHelpText>Information in this field is not shared with the customer</inlineHelpText>
    <label>Internal Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>