force-app/main/default/objects/Knowledge__kav/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <description>Who requested this article be created/published.</description>
    <label>Requested By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>