force-app/main/default/objects/Knowledge__kav/fields/Review_On__c.field-meta.xml
<CustomField>
    <fullName>Review_On__c</fullName>
    <description>Date for which article should be reviewed</description>
    <label>Review On</label>
    <type>Date</type>
</CustomField>