force-app/main/default/objects/Knowledge__kav/fields/Up_for_Review__c.field-meta.xml
<CustomField>
    <fullName>Up_for_Review__c</fullName>
    <description>Date for which article should be reviewed</description>
    <label>Up for Review</label>
    <type>Date</type>
</CustomField>