force-app/main/default/objects/Knowledge__kav/recordTypes/Answer.recordType-meta.xml
<RecordType>
    <fullName>Answer</fullName>
    <active>true</active>
    <label>Content</label>
</RecordType>