force-app/main/default/objects/Knowledge__kav/listViews/PendingPublishment.listView-meta.xml
<ListView>
    <fullName>PendingPublishment</fullName>
    <columns>TITLE</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>IS_CHANNEL_CSP</columns>
    <columns>OWNER_ID</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>VALIDATION_STATUS_ENUM</field>
        <operation>equals</operation>
        <value>Pending Approval</value>
    </filters>
    <label>Pending Publication</label>
</ListView>