force-app/main/default/objects/Knowledge__kav/listViews/Public_DGX_Articles.listView-meta.xml
<ListView>
    <fullName>Public_DGX_Articles</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>IS_CHANNEL_PKB</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IS_CHANNEL_PKB</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>Public Knowledge Base Articles</label>
</ListView>