force-app/main/default/objects/Knowledge__kav/listViews/Public_GRID_Articles.listView-meta.xml
<ListView>
    <fullName>Public_GRID_Articles</fullName>
    <columns>TITLE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>IS_CHANNEL_PKB</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IS_CHANNEL_PKB</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Topics</field>
        <operation>includes</operation>
        <value>GRID</value>
    </filters>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>Public GRID Articles</label>
</ListView>