force-app/main/default/objects/Knowledge__kav/listViews/published_articles.listView-meta.xml
<ListView>
    <fullName>published_articles</fullName>
    <columns>TITLE</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>ARTICLE_TOTAL_VIEW_COUNT</columns>
    <columns>OWNER_ID</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <columns>Up_for_Review__c</columns>
    <columns>IS_CHANNEL_APP</columns>
    <columns>IS_CHANNEL_CSP</columns>
    <columns>IS_CHANNEL_PRM</columns>
    <columns>IS_CHANNEL_PKB</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>en_US</value>
    </filters>
    <label>Published Articles</label>
</ListView>